Bug Fix /Wrong width/

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -26,11 +26,11 @@ body {
   width: 36px;
   height: 30px;
   right: 25px;
-  top: 25px;
+  top: 22px;
 }
 .logonav {
   left: 25px;
-  top: 27px;
+  top: 24px;
   line-height: 30px;
   color: #014d40;
 }
